--- a/mas-bags/package.json
+++ b/mas-bags/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ctrl/tinycolor": "^4.1.0",
+    "@shadcn/ui": "^0.0.4",
+    "chroma-js": "^3.1.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
+    "lucide-react": "^0.477.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.5"
   },
