--- a/mas-bags/package.json
+++ b/mas-bags/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@ctrl/tinycolor": "^4.1.0",
+    "@fontsource/jost": "^5.2.5",
     "@shadcn/ui": "^0.0.4",
     "chroma-js": "^3.1.2",
     "html2canvas": "^1.4.1",
